test/error/compile_error_type_mismatch/identity/src/Identity.hx
package;

class Identity {
	public static function identity(x:String):String {
		return x;
	}
}
